--- a/MemeMe1.0/Base.lproj/Main.storyboard
+++ b/MemeMe1.0/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="gJN-ic-wWs">
                                 <rect key="frame" x="32" y="132" width="311" height="558"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="gVR-eO-tK2">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="gVR-eO-tK2">
                                         <rect key="frame" x="0.0" y="0.0" width="311" height="558"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                     </imageView>
@@ -32,11 +32,11 @@
                                 <items>
                                     <barButtonItem style="plain" systemItem="camera" id="5OX-Zt-GZn" userLabel="Camera">
                                         <connections>
-                                            <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="InU-b4-lKd"/>
+                                            <action selector="pickAnImage:" destination="BYZ-38-t0r" id="oPn-Bd-KC1"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="dVv-kf-f2H"/>
-                                    <barButtonItem title="Photos" id="aoF-Q0-21h">
+                                    <barButtonItem tag="1" title="Photos" id="aoF-Q0-21h">
                                         <connections>
                                             <action selector="pickAnImage:" destination="BYZ-38-t0r" id="dLd-1c-nXr"/>
                                         </connections>
@@ -44,13 +44,13 @@
                                 </items>
                             </toolbar>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="TOP" textAlignment="center" minimumFontSize="35" translatesAutoresizingMaskIntoConstraints="NO" id="QdA-tq-Ewj" userLabel="TopText">
-                                <rect key="frame" x="64" y="140" width="247" height="42"/>
+                                <rect key="frame" x="152.66666666666666" y="140" width="70" height="42"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="BOTTOM" textAlignment="center" minimumFontSize="35" translatesAutoresizingMaskIntoConstraints="NO" id="CzP-IW-9gJ" userLabel="BottomText">
-                                <rect key="frame" x="64" y="632" width="247" height="42"/>
+                                <rect key="frame" x="114.66666666666669" y="632" width="146" height="42"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
@@ -78,18 +78,16 @@
                             <constraint firstItem="QdA-tq-Ewj" firstAttribute="top" secondItem="gJN-ic-wWs" secondAttribute="top" constant="8" id="76M-mL-rRZ"/>
                             <constraint firstItem="gJN-ic-wWs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="88" id="H6d-Bz-Hdb"/>
                             <constraint firstItem="9kR-0c-6QH" firstAttribute="top" secondItem="gJN-ic-wWs" secondAttribute="bottom" constant="39" id="JcV-k6-nZw"/>
-                            <constraint firstItem="QdA-tq-Ewj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="64" id="Ktv-VE-NX8"/>
                             <constraint firstItem="9kR-0c-6QH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="T4S-Jd-BUN"/>
                             <constraint firstItem="gJN-ic-wWs" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="TLo-xn-C3y"/>
                             <constraint firstItem="4DL-yd-reA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="U1B-Ah-0WE"/>
+                            <constraint firstItem="QdA-tq-Ewj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VAW-5C-ZQr"/>
                             <constraint firstItem="4DL-yd-reA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Wad-ok-tZb"/>
                             <constraint firstItem="9kR-0c-6QH" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="fpd-Kp-VtG"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CzP-IW-9gJ" secondAttribute="trailing" constant="64" id="gc6-yg-5Rg"/>
                             <constraint firstItem="4DL-yd-reA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lMg-5s-CED"/>
+                            <constraint firstItem="CzP-IW-9gJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qDV-Zd-yuz"/>
                             <constraint firstItem="gJN-ic-wWs" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="tl3-wn-haQ"/>
                             <constraint firstItem="9kR-0c-6QH" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="uOE-fJ-fom"/>
-                            <constraint firstItem="CzP-IW-9gJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="64" id="wKi-Yo-r2h"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QdA-tq-Ewj" secondAttribute="trailing" constant="64" id="xEv-NA-Fgt"/>
                             <constraint firstItem="9kR-0c-6QH" firstAttribute="top" secondItem="CzP-IW-9gJ" secondAttribute="bottom" constant="55" id="yyO-56-GjE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -105,6 +103,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="61.600000000000001" y="37.684729064039409"/>
         </scene>
     </scenes>
     <resources>
